# AI-Humanoid-Robotics

./: .claude.json  .env  .gitignore  BASE_SENSOR_IMPLEMENTATION_SUMMARY.md  DOCUSAURUS_VERIFICATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  MODULE_2_COMPLETION.md  PERCEPTION_MODULE_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_GAZEBO_COMPLETE.md  PHASE3_ACTUATION_SENSORS_COMPLETE.md  PHASE7_COMPLETE.md  PHASE7_POLISH_COMPLETE.md  PR_DESCRIPTION.md  PR_TEMPLATE.md  PULL_REQUEST.md  PULL_REQUEST_INFO.md  RAG_INTEGRATION_SUCCESS.md  RAG_TESTING_COMPLETE.md  README.md  ROS2_INTEGRATION_SUMMARY.md  ROS2_RESEARCH_INDEX.md  TESTING_SETUP_GUIDE.md  TEST_RAG_BACKEND.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_system_metrics.py  verify_setup.py
.specify/memory/: constitution.md
1-docosaurus-textbook/backend/: INSTALL.md  PHASE_1_COMPLETE.md  README.md  pyproject.toml  requirements.txt  run.py
1-docosaurus-textbook/backend/app/: config.py  main.py
1-docosaurus-textbook/backend/app/routers/: chat.py
1-docosaurus-textbook/backend/app/schemas/: chat.py
1-docosaurus-textbook/backend/app/services/: document_processor.py  vector_store.py
1-docosaurus-textbook/backend/tests/: test_health.py
1-docosaurus-textbook/frontend/: .gitignore  docusaurus.config.js  tsconfig.json  vercel.json
1-docusaurus-textbook/: .env.admin.example  ADMIN_DASHBOARD_ARCHITECTURE.md  ADMIN_IMPLEMENTATION_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_DEPLOY_NOW.md
1-docusaurus-textbook/backend/: .env.example  .gitignore  INSTALL.md  PHASE_1_COMPLETE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh  verify.sh
1-docusaurus-textbook/frontend/: README.md  docusaurus.config.js  package.json
docs/: QUICKSTART.md  perception_quickstart.md
docs/module-1-ros2-nervous-system/: realtime-constraints.md  ros2-as-nervous-system.md
examples/: README.md  __init__.py  basic_skill.py
examples/implementations/: __init__.py  calculate_sum.py  echo_message.py  greet_user.py
examples/perception/: README.md  mapping_demo.py  performance_monitoring.py  sensor_fusion_demo.py  simple_detection.py
examples/ros2_nervous_system/: 01_robot_control_node.py  02_joint_state_publisher.py  03_joint_command_subscriber.py  04_robot_control_service_server.py  05_robot_control_service_client.py  06_ai_robot_agent.py  README.md  humanoid_robot.urdf  launch_pipeline.launch.py
humanoid-robotic-book/: docusaurus.config.js  package-lock.json  package.json
humanoid-robotic-book/blog/: 2019-05-29-long-blog-post.md
humanoid-robotic-book/frontend/: QUICKSTART.md  README.md  package-lock.json  package.json
scripts/: benchmark_perception.py  run_monitoring_dashboard.py  setup_isaac_ros.sh  validate_actuation_and_sensors.py  validate_gazebo_physics.py  validate_perception.py  validate_perception_module.py  validate_sensor_fusion.py
specs/001-ai-robot-brain/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-nervous-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-docusaurus-chatkit-frontend/: plan.md  spec.md  tasks.md
specs/003-mcp-server-setup/: plan.md  tasks.md
specs/004-skills-subagents/: README.md  RESEARCH_INDEX.md  data-model.md  framework-comparison.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-chatkit-skills/: spec.md
specs/006-chatbot-auth/: TECHNOLOGY_RESEARCH.md  plan.md  (+4 more)
tests/: __init__.py
(+314 files in other folders)
