[project]
name = "humanoid-robotics-backend"
version = "0.1.0"
description = "Production AI Backend for Humanoid Robotics Book"
authors = [{ name = "Your Team", email = "team@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "qdrant-client>=1.12.1",
    "pyjwt>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "openai>=1.58.1",
    "anthropic>=0.40.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
